// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineStage handles when UI element and backend function are both present 1`] = `
Array [
  <div
    css={
      Array [
        Object {
          "map": undefined,
          "name": "6j1h23",
          "next": undefined,
          "styles": "
    margin: auto;
    width: 100%;
    max-width: 64rem;
  ",
        },
        undefined,
        Object {
          "map": undefined,
          "name": "8qpjjf",
          "next": undefined,
          "styles": "
    display: block;
  ",
        },
        false,
        false,
        false,
        Object {
          "map": undefined,
          "name": "1dpbaaj",
          "next": undefined,
          "styles": "
    padding: 0 0.09375rem;
  ",
        },
        undefined,
      ]
    }
  >
    <h4>
      1
       min(s)
    </h4>
  </div>,
  .emotion-1 {
  width: 50%;
}

.emotion-0 {
  font-family: 'Courier New',Courier,monospace;
}

<div
    css={
      Array [
        Object {
          "map": undefined,
          "name": "6j1h23",
          "next": undefined,
          "styles": "
    margin: auto;
    width: 100%;
    max-width: 64rem;
  ",
        },
        undefined,
        Object {
          "map": undefined,
          "name": "8qpjjf",
          "next": undefined,
          "styles": "
    display: block;
  ",
        },
        false,
        false,
        false,
        Object {
          "map": undefined,
          "name": "1dpbaaj",
          "next": undefined,
          "styles": "
    padding: 0 0.09375rem;
  ",
        },
        undefined,
      ]
    }
  >
    <div
      className="emotion-1"
    >
      <h4>
        Connect Hello World Component
      </h4>
      <div
        className=" graphcms-image-outer-wrapper"
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=" graphcms-image-wrapper"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
              "zIndex": 1,
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <img
            alt=""
            onLoad={null}
            src="https://media.graphcms.com/resize=w:20,h:20,fit:crop/blur=amount:2/compress/my-test-image"
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 0.5s",
                "transitionDelay": "0.25s",
                "width": "100%",
              }
            }
            title=""
          />
          
        </div>
      </div>
      <div
        className="emotion-0"
      >
        &lt;connect-hello-world /&gt;
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <h4>
        Install the Bearer Library
      </h4>
      <div
        className="emotion-0"
      >
        npm install @bearer/react
      </div>
    </div>
  </div>,
]
`;

exports[`TimelineStage handles when UI element is not present, and has no auto margin when index is odd 1`] = `
Array [
  <div
    css={
      Array [
        Object {
          "map": undefined,
          "name": "6j1h23",
          "next": undefined,
          "styles": "
    margin: auto;
    width: 100%;
    max-width: 64rem;
  ",
        },
        undefined,
        Object {
          "map": undefined,
          "name": "8qpjjf",
          "next": undefined,
          "styles": "
    display: block;
  ",
        },
        false,
        false,
        false,
        Object {
          "map": undefined,
          "name": "1dpbaaj",
          "next": undefined,
          "styles": "
    padding: 0 0.09375rem;
  ",
        },
        undefined,
      ]
    }
  >
    <h4>
      2
       min(s)
    </h4>
  </div>,
  .emotion-1 {
  width: 50%;
}

.emotion-0 {
  font-family: 'Courier New',Courier,monospace;
}

<div
    css={
      Array [
        Object {
          "map": undefined,
          "name": "6j1h23",
          "next": undefined,
          "styles": "
    margin: auto;
    width: 100%;
    max-width: 64rem;
  ",
        },
        undefined,
        Object {
          "map": undefined,
          "name": "8qpjjf",
          "next": undefined,
          "styles": "
    display: block;
  ",
        },
        false,
        false,
        false,
        Object {
          "map": undefined,
          "name": "1dpbaaj",
          "next": undefined,
          "styles": "
    padding: 0 0.09375rem;
  ",
        },
        undefined,
      ]
    }
  >
    <div
      className="emotion-1"
    >
      <h4>
        Install the Bearer Library
      </h4>
      <div
        className="emotion-0"
      >
        npm install @bearer/react
      </div>
    </div>
  </div>,
]
`;

exports[`TimelineStage handles when backend function is not present, and has auto margin-left when index is even 1`] = `
Array [
  <div
    css={
      Array [
        Object {
          "map": undefined,
          "name": "6j1h23",
          "next": undefined,
          "styles": "
    margin: auto;
    width: 100%;
    max-width: 64rem;
  ",
        },
        undefined,
        Object {
          "map": undefined,
          "name": "8qpjjf",
          "next": undefined,
          "styles": "
    display: block;
  ",
        },
        false,
        false,
        false,
        Object {
          "map": undefined,
          "name": "1dpbaaj",
          "next": undefined,
          "styles": "
    padding: 0 0.09375rem;
  ",
        },
        undefined,
      ]
    }
  >
    <h4>
      2
       min(s)
    </h4>
  </div>,
  .emotion-0 {
  font-family: 'Courier New',Courier,monospace;
}

.emotion-1 {
  width: 50%;
  margin-left: auto;
}

<div
    css={
      Array [
        Object {
          "map": undefined,
          "name": "6j1h23",
          "next": undefined,
          "styles": "
    margin: auto;
    width: 100%;
    max-width: 64rem;
  ",
        },
        undefined,
        Object {
          "map": undefined,
          "name": "8qpjjf",
          "next": undefined,
          "styles": "
    display: block;
  ",
        },
        false,
        false,
        false,
        Object {
          "map": undefined,
          "name": "1dpbaaj",
          "next": undefined,
          "styles": "
    padding: 0 0.09375rem;
  ",
        },
        undefined,
      ]
    }
  >
    <div
      className="emotion-1"
    >
      <h4>
        Connect Hello World Component
      </h4>
      <div
        className=" graphcms-image-outer-wrapper"
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=" graphcms-image-wrapper"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
              "zIndex": 1,
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <img
            alt=""
            onLoad={null}
            src="https://media.graphcms.com/resize=w:20,h:20,fit:crop/blur=amount:2/compress/my-test-image"
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 0.5s",
                "transitionDelay": "0.25s",
                "width": "100%",
              }
            }
            title=""
          />
          
        </div>
      </div>
      <div
        className="emotion-0"
      >
        &lt;connect-hello-world /&gt;
      </div>
    </div>
  </div>,
]
`;
